--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Horiseon | Web Optimizations</title>
 </head>
+
 <body>
     <!-- header and navigation -->
     <!-- header begins -->
@@ -83,8 +84,7 @@
                     alt="social media bubbles around table"
                     />
                 </figure>
-                <h2>Social Media Marketing</h2>
-                <p>
+                <h2>Social Media Marketing</h2><p>
                     Social media continues to have a sizable influence on buying habits.
                     Social media marketing helps you determine which platforms are
                     suited to your brand, using analytics to find the right markets and
@@ -100,8 +100,7 @@
                 <figure>
                     <img
                     src="./assets/images/lead-generation.png"
-                    alt="Gear funnel pointing to money"
-                    />
+                    alt="Gear funnel pointing to money"/>
                 </figure>
                 <p>
                     Inbound strategies for lead generation require less work for your
@@ -109,33 +108,31 @@
                 </p>
             </div>
             <!-- benefit-brand aside -->
-            <div class="benefit-brand">
+            <section class="benefit-brand">
                 <h3>Brand Awareness</h3>
                 <figure>
                     <img
                     src="./assets/images/brand-awareness.png"
-                    alt="Lightbulb turned on"
-                    />
+                    alt="Lightbulb turned on"/>
                 </figure>
                 <p>
                     Users find your business through paid and organic searches,
                     increasing the search ranking and visibility for your business.
                 </p>
-            </div>
+            </section>
             <!-- benefit-cost aside -->
-            <div class="benefit-cost">
+            <section class="benefit-cost">
                 <h3>Cost Management</h3>
                 <figure>
                     <img
                     src="./assets/images/cost-management.png"
-                    alt="Multiple gears with the symbol of money"
-                    />
+                    alt="Multiple gears with the symbol of money"/>
                 </figure>
                 <p>
                     As the search ranking for your business increases, your advertising
                     costs decrease, and you no longer need to advertise your page.
                 </p>
-            </div>
+            </section>
         </aside>
     </div>
     <!-- footer section -->
