added new changes to html and css

--- a/index.html
+++ b/index.html
@@ -12,29 +12,26 @@
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
-            <!-- nav begins -->
+            <!-- navigation begins -->
             <nav>
                 <ul>
                     <li>
-                        <a href="#search-engine-optimization"
-                        >Search Engine Optimization</a>
+                        <a href="#search-engine-optimization">Search Engine Optimization</a>
                     </li>
                     <li>
-                        <a href="#online-reputation-management"
-                        >Online Reputation Management</a>
+                        <a href="#online-reputation-management">Online Reputation Management</a>
                     </li>
                     <li>
-                        <a href="#social-media-marketing"
-                        >Social Media Marketing</a>
+                        <a href="#social-media-marketing">Social Media Marketing</a>
                     </li>
                 </ul>
             </nav>
-            <!-- nav ends -->
+            <!-- navigation ends -->
         </div>
     </header>
     <!-- header ends -->
     <!-- background image-->
-    <figure class="hero"></figure>
+    <main class="hero"></main>
     <!-- main page content -->
     <div>
         <main class="content">
@@ -46,7 +43,7 @@
                     <img
                     src="./assets/images/search-engine-optimization.jpg"
                     class="float-left"
-                    alt="SEO optimization notebook diagram"/>
+                    alt="Notebook of SEO ideas "/>
                 </figure>
                 <h2>Search Engine Optimization</h2>
                 <p>
@@ -64,7 +61,7 @@
                     <img
                     src="./assets/images/online-reputation-management.jpg"
                     class="float-right"
-                    alt="Computer infographic chart"/>
+                    alt="Graph stats on a laptop"/>
                 </figure>
                 <h2>Online Reputation Management</h2>
                 <p>
@@ -84,7 +81,8 @@
                     alt="social media bubbles around table"
                     />
                 </figure>
-                <h2>Social Media Marketing</h2><p>
+                <h2>Social Media Marketing</h2>
+                <p>
                     Social media continues to have a sizable influence on buying habits.
                     Social media marketing helps you determine which platforms are
                     suited to your brand, using analytics to find the right markets and
@@ -100,7 +98,7 @@
                 <figure>
                     <img
                     src="./assets/images/lead-generation.png"
-                    alt="Gear funnel pointing to money"/>
+                    alt="Funnel into money"/>
                 </figure>
                 <p>
                     Inbound strategies for lead generation require less work for your
@@ -126,7 +124,7 @@
                 <figure>
                     <img
                     src="./assets/images/cost-management.png"
-                    alt="Multiple gears with the symbol of money"/>
+                    alt="Gear's and money"/>
                 </figure>
                 <p>
                     As the search ranking for your business increases, your advertising
