New changes to HTML and CSS

--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
                     <img
                     src="./assets/images/social-media-marketing.jpg"
                     class="float-left"
-                    alt="social media bubbles around table"
-                    />
+                    alt="social media bubbles around table"/>
                 </figure>
                 <h2>Social Media Marketing</h2>
                 <p>
